--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
 
 		<div class="row">
 			{% for i in info.start_step.all %}
-			<div class="item col-12 col-md-4">
+			<div class="item col-12 col-md-6 col-lg-3">
 				<div class="icon-holder">
 					<img src="{{i.image.url}}" alt="">
 					<div class="arrow-holder d-none d-lg-inline-block"></div>
