--- a/templates/base.html
+++ b/templates/base.html
@@ -88,42 +88,22 @@
             <div class="container py-5 mb-3">
                 <div class="row">
                     <div class="footer-col col-6 col-lg-3">
-                        <h4 class="col-heading">Products</h4>
+                        <h4 class="col-heading">Sahifalar</h4>
                         <ul class="list-unstyled">
-                            <li><a class="text-link" href="#">Bootstrap Themes</a></li>
-                            <li><a class="text-link" href="#">Design Templates</a></li>
-                            <li><a class="text-link" href="#">Live Demo</a></li>
-                            <li><a class="text-link" href="#">Showcase</a></li>
+                            <li><a class="text-link" href="{% url 'home' %}">Bosh sahifa</a></li>
+                            <li><a class="text-link" href="{% url 'about' %}">Dastur haqida</a></li>
+                            <li><a class="text-link" href="{% url 'contact' %}">Contact</a></li>
+                            <li><a class="text-link" href="{% url 'pricing' %}">Narxlar</a></li>
 
                         </ul>
                     </div><!--//footer-col-->
                     <div class="footer-col col-6 col-lg-3">
-                        <h4 class="col-heading">Developers</h4>
+                        <h4 class="col-heading">Xususiyatlar</h4>
                         <ul class="list-unstyled">
-                            <li><a class="text-link" href="#">Pricing</a></li>
-                            <li><a class="text-link" href="#">APIs</a></li>
-                            <li><a class="text-link" href="#">FAQs</a></li>
-                            <li><a class="text-link" href="#">Support</a></li>
+                            {% for i in info.abilitys.all %}
+                            <li><a class="text-link" href="#">{{i.title}}</a></li>
+                            {% endfor %}
                         </ul>
-                    </div><!--//footer-col-->
-                    <div class="footer-col col-6 col-lg-3">
-                        <h4 class="col-heading">Resources</h4>
-                        <ul class="list-unstyled">
-                            <li><a class="text-link" href="#">Docs</a></li>
-                            <li><a class="text-link" href="#">Freebies</a></li>
-                            <li><a class="text-link" href="#">Affiliates</a></li>
-                            <li><a class="text-link" href="#">Community</a></li>
-                        </ul>
-                    </div><!--//footer-col-->
-                    <div class="footer-col col-6 col-lg-3">
-                        <h4 class="col-heading">CoderPro</h4>
-                        <ul class="list-unstyled">
-                            <li><a class="text-link" href="#">About Us</a></li>
-                            <li><a class="text-link" href="#">Contact Us</a></li>
-                            <li><a class="text-link" href="#">Privacy</a></li>
-                            <li><a class="text-link" href="#">Terms of Services</a></li>
-                        </ul>
-
                     </div><!--//footer-col-->
                 </div><!--//row-->
             </div><!--//container-->
