--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -8,7 +8,7 @@
 			<div class="plan-switch text-center mb-4" id="plan-switch">
 
 
-				<div class="mb-5 plan-switch-intro">To'lov qilib dastur mudatini uzaytiring</div>
+				<div class="mb-5 plan-switch-intro">Extend the program by paying</div>
 
 			</div>
 			<div class="plan-items row justify-content-center" id="plan-items">
@@ -21,11 +21,11 @@
 								<div class="plan-cost-monthly plan-cost-option">
 									<span class="currency">$</span>
 									<span class="number">{{p.year}}</span>
-									<span class="unit">/yiliga</span>
+									<span class="unit">/year</span>
 								</div>
 							</div><!--//plan-cost-->
 							<div class="plan-cta">
-								<a class="btn-primary btn" href="{% url 'login' %}">Boshlash</a>
+								<a class="btn-primary btn" href="{% url 'login' %}">Start</a>
 							</div>
 						</div><!--//plan-header-->
 
@@ -43,7 +43,7 @@
 
 	<section class="faq-section py-5">
 		<div class="container single-col-max">
-			<h3 class="text-center mb-5">Tez-tez so'raladigan savollar</h3>
+			<h3 class="text-center mb-5">Frequently asked questions</h3>
 
 
 			<div id="faq-accordion" class="faq-accordion accordion mx-auto text-start">
@@ -69,8 +69,8 @@
 			</div><!--//faq-accordion-->
 
 			<div class="text-center">
-				<h4 class="pt-5">sizda savollar bormi? </h4>
-				<div class="section-intro"><a class="text-link" href="{% url 'contact' %}">Biz bilan bo'glaning</a>
+				<h4 class="pt-5">do you have any questions? </h4>
+				<div class="section-intro"><a class="text-link" href="{% url 'contact' %}">Contact with us</a>
 				</div>
 			</div>
 		</div><!--//container-->
