--- a/templates/base.html
+++ b/templates/base.html
@@ -50,10 +50,10 @@
 
                             <ul class="navbar-nav ms-lg-auto">
                                 <li class="nav-item me-lg-4">
-                                    <a class="nav-link" href="{% url 'about' %}">Dastur haqida</a>
+                                    <a class="nav-link" href="{% url 'about' %}">About Program</a>
                                 </li>
                                 <li class="nav-item me-lg-4">
-                                    <a class="nav-link" href="{% url 'pricing' %}">Narxlar</a>
+                                    <a class="nav-link" href="{% url 'pricing' %}">Pricing</a>
                                 </li>
 
                                 <li class="nav-item me-lg-4">
@@ -61,17 +61,17 @@
                                 </li>
                                 {% if user.is_authenticated %}
                                 <li class="nav-item me-lg-4">
-                                    <a class="nav-link" href="{% url 'logout' %}">Chiqish</a>
+                                    <a class="nav-link" href="{% url 'logout' %}">logout</a>
                                 </li>
                                 <li class="nav-item me-lg-0 mt-3 mt-lg-0">
                                     <a class="btn btn-primary text-white" href="{% url 'profile' %}">Profile</a>
                                 </li>
                                 {% else %}
                                 <li class="nav-item me-lg-4">
-                                    <a class="nav-link" href="{% url 'login' %}">Kirish</a>
+                                    <a class="nav-link" href="{% url 'login' %}">Login</a>
                                 </li>
                                 <li class="nav-item me-lg-0 mt-3 mt-lg-0">
-                                    <a class="btn btn-primary text-white" href="{% url 'reg' %}">Ro'yxatdan o'tish</a>
+                                    <a class="btn btn-primary text-white" href="{% url 'reg' %}">Register</a>
                                 </li>
                                 {% endif %}
                             </ul>
@@ -88,17 +88,17 @@
             <div class="container py-5 mb-3">
                 <div class="row">
                     <div class="footer-col col-6 col-lg-3">
-                        <h4 class="col-heading">Sahifalar</h4>
+                        <h4 class="col-heading">Pages</h4>
                         <ul class="list-unstyled">
-                            <li><a class="text-link" href="{% url 'home' %}">Bosh sahifa</a></li>
-                            <li><a class="text-link" href="{% url 'about' %}">Dastur haqida</a></li>
+                            <li><a class="text-link" href="{% url 'home' %}">Main Page</a></li>
+                            <li><a class="text-link" href="{% url 'about' %}">About Program</a></li>
                             <li><a class="text-link" href="{% url 'contact' %}">Contact</a></li>
-                            <li><a class="text-link" href="{% url 'pricing' %}">Narxlar</a></li>
+                            <li><a class="text-link" href="{% url 'pricing' %}">Pricing</a></li>
 
                         </ul>
                     </div><!--//footer-col-->
                     <div class="footer-col col-6 col-lg-3">
-                        <h4 class="col-heading">Xususiyatlar</h4>
+                        <h4 class="col-heading">Features</h4>
                         <ul class="list-unstyled">
                             {% for i in info.abilitys.all %}
                             <li><a class="text-link" href="#">{{i.title}}</a></li>
