--- a/templates/index.html
+++ b/templates/index.html
@@ -10,14 +10,14 @@
 				<h1 class="site-headline font-weight-bold mb-3">{{info.slide_title}}</h1>
 				<div class="site-tagline mb-4">{{info.slide_text}}</div>
 				<div class="cta-btns mb-lg-3">
-					<a class="btn btn-primary me-2 mb-3" href="{% url 'login' %}">Tekinga boshlash<i
+					<a class="btn btn-primary me-2 mb-3" href="{% url 'login' %}">Start free<i
 							class="fas fa-arrow-alt-circle-right ms-2"></i></a>
-					<a class="btn btn-secondary mb-3" href="{% url 'about' %}">Hujatlarni ko'rish<i
+					<a class="btn btn-secondary mb-3" href="{% url 'about' %}">Download and Docs<i
 							class="fas fa-arrow-alt-circle-right ms-2"></i></a>
 				</div>
 			</div>
 			<div class="col-12 col-lg-6 text-center">
-				<img class="hero-figure mx-auto" src="{{info.slide_image.url}}" alt="">
+				<img class="hero-figure mx-auto" style="max-width: 60%;" src="{{info.slide_image.url}}" alt="">
 			</div>
 		</div><!--//row-->
 	</div>
@@ -26,8 +26,8 @@
 <section class="benefits-section theme-bg-light py-5">
 
 	<div class="container">
-		<h3 class="mb-3 text-center font-weight-bold section-title">Kompyuter foydalanuvchilari uchun</h3>
-		<div class="mb-5 text-center section-intro">Xususiyatlar</div>
+		<h3 class="mb-3 text-center font-weight-bold section-title">For computer users</h3>
+		<div class="mb-5 text-center section-intro">Features</div>
 		<div class="row">
 			{% for i in info.abilitys.all %}
 			<div class="item col-12 col-md-6 col-lg-3">
@@ -37,7 +37,7 @@
 					</div><!--//icon-holder-->
 					<h5 class="mb-3">{{i.title}}</h5>
 					<div>{{i.text}}</div>
-					<div class="mt-2"><a class="text-link" href="{{i.video_example}}">Batafsil &rarr;</a></div>
+					<div class="mt-2"><a class="text-link" href="{{i.video_example}}">More &rarr;</a></div>
 				</div><!--//item-inner-->
 			</div><!--//item-->
 			{% endfor %}
@@ -50,8 +50,8 @@
 
 <section class="how-section py-5">
 	<div class="container">
-		<h3 class="mb-3 text-center font-weight-bold section-title">Qanday foydalaniladi</h3>
-		<div class="mb-5 text-center section-intro">Siz faqat {{count_step}} ta bosqichda dasturdan foydalanasiz</div>
+		<h3 class="mb-3 text-center font-weight-bold section-title">Steps to use</h3>
+		<div class="mb-5 text-center section-intro">You only use the software in {{count_step}} steps</div>
 
 		<div class="row">
 			{% for i in info.start_step.all %}
