--- a/templates/base.html
+++ b/templates/base.html
@@ -3,15 +3,15 @@
 <html lang="en">
 
     <head>
-        <title>StarTech Project</title>
+        <title>iBotNet Project</title>
 
         <!-- Meta -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Bootstrap 5 Template For Software Startups">
-        <meta name="author" content="Xiaoying Riley at 3rd Wave Media">
-        <link rel="shortcut icon" href="favicon.ico">
+        <meta name="description" content="iBotNet project for PTA">
+        <meta name="author" content="by Qudratillo Salokhiddinov">
+        <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
 
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap" rel="stylesheet">
