--- a/templates/login.html
+++ b/templates/login.html
@@ -3,14 +3,12 @@
 <html lang="en">
 
 	<head>
-		<title>StarTech Project</title>
+		<title>iBotNet Project</title>
 		<!-- Meta -->
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Bootstrap 5 Template For Software Startups">
-		<meta name="author" content="Xiaoying Riley at 3rd Wave Media">
-		<link rel="shortcut icon" href="favicon.ico">
+		<link rel="shortcut icon" href="{% static 'favicon.ico' %}">
 
 		<!-- Google Font -->
 		<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap" rel="stylesheet">
@@ -29,7 +27,7 @@
 
 		<section class="auth-section login-section text-center py-5">
 			<div class="container">
-				<div class="site-logo"><a class="navbar-brand" href="{% url 'home' %}"><img class="logo-icon me-2"
+				<div class="site-logo mb-3"><a class="navbar-brand" href="{% url 'home' %}"><img class="logo-icon me-2"
 							width="40px" src="{{info.logo.url}}" alt="logo"><span class="logo-text">{{info.name}}<span
 								class="text-alt"></span></span></a></div>
 
